--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,31 +13,72 @@
             android:layout_width="175dp"
             android:layout_height="match_parent" />
         <TextView
+            android:text="TITLE"
             android:id="@+id/title"
             android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_height="125dp"
             android:layout_toRightOf="@+id/image"
-            android:textSize="30dp"/>
-        <TextView
-            android:id="@+id/participant"
+            android:textSize="25dp"/>
+        <LinearLayout
+            android:id="@+id/users"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_below="@+id/title"
+            android:layout_height="40dp"
             android:layout_toRightOf="@+id/image"
-            android:textSize="20dp"
-            android:gravity="center_horizontal"/>
-        <TextView
-            android:id="@+id/wish"
+            android:layout_below="@+id/title">
+            <TextView
+                android:text="USER"
+                android:id="@+id/user"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_below="@+id/title"
+                android:layout_toRightOf="@+id/image"
+                android:textSize="20dp"
+                android:gravity="center_vertical"
+                android:layout_weight="6"/>
+            <Button
+                android:id="@+id/look"
+                android:text="查看"
+                android:textSize="10dp"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="3"
+                android:layout_gravity="center_vertical"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/lin"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_below="@+id/participant"
+            android:layout_height="40dp"
+            android:orientation="horizontal"
             android:layout_toRightOf="@+id/image"
-            android:textSize="20dp"
-            android:gravity="center_horizontal" />
+            android:layout_below="@+id/users">
+            <TextView
+                android:id="@+id/wish"
+                android:text="WISH"
+                android:layout_width="100dp"
+                android:layout_height="40dp"
+                android:layout_below="@+id/participant"
+                android:layout_toRightOf="@+id/image"
+                android:textSize="15dp"
+                android:layout_weight="2"
+                android:gravity="center_vertical"
+                />
+            <TextView
+                android:id="@+id/participant"
+                android:text="participant"
+                android:layout_width="100dp"
+                android:layout_weight="3"
+                android:layout_height="40dp"
+                android:layout_below="@+id/title"
+                android:layout_toRightOf="@+id/image"
+                android:textSize="15dp"
+                android:gravity="center_vertical"
+               />
+        </LinearLayout>
         <Button
             android:id="@+id/map"
             android:text="查看地图"
-            android:layout_below="@+id/wish"
+            android:layout_below="@+id/lin"
             android:layout_toRightOf="@+id/image"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
