--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,29 +26,30 @@
             android:layout_toRightOf="@+id/image"
             android:layout_below="@+id/title">
             <TextView
-                android:text="USER"
+                android:text="创建者："
                 android:id="@+id/user"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:layout_below="@+id/title"
                 android:layout_toRightOf="@+id/image"
                 android:textSize="20dp"
                 android:gravity="center_vertical"
-                android:layout_weight="6"/>
+                />
             <Button
                 android:id="@+id/look"
                 android:text="查看"
-                android:textSize="10dp"
-                android:layout_width="0dp"
+                android:textSize="15dp"
+                android:layout_width="150dp"
                 android:layout_height="40dp"
-                android:layout_weight="3"
-                android:layout_gravity="center_vertical"/>
+                android:layout_gravity="center_vertical"
+                android:background="@android:color/transparent"
+                android:textColor="#836FFF" />
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/lin"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="50dp"
             android:orientation="horizontal"
             android:layout_toRightOf="@+id/image"
             android:layout_below="@+id/users">
@@ -85,6 +86,13 @@
 
         
     </RelativeLayout>
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="50dp"
+        android:text="活动详情:"
+        android:textSize="30dp"
+        android:layout_gravity="center_vertical"
+        android:gravity="center_vertical"/>
 
     <ScrollView
         android:layout_width="match_parent"
