--- a/app/src/main/res/layout/event_list.xml
+++ b/app/src/main/res/layout/event_list.xml
@@ -4,9 +4,49 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="80dp">
+
+        <TextView
+            android:text="     本日天气："
+            android:layout_width="90dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center_vertical"
+            android:gravity="center_vertical"/>
+
+        <ImageView
+            android:id="@+id/weather_image"
+            android:src="@drawable/sunny"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center_vertical"/>
+        <TextView
+            android:id="@+id/weather"
+            android:text="        晴"
+            android:layout_width="100dp"
+            android:layout_height="60dp"
+            android:gravity="center_vertical"
+            android:layout_gravity="center_vertical"/>
+        <TextView
+            android:text="温度"
+            android:id="@+id/temp"
+            android:layout_width="120dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center_vertical"
+            android:gravity="center_vertical"/>
+        <TextView
+            android:text="时间"
+            android:id="@+id/time"
+            android:layout_width="120dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center_vertical"
+            android:gravity="center_vertical"/>
+    </LinearLayout>
+
     <ListView
         android:id="@+id/list_event"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="match_parent">
 
     </ListView>
